Fix title casing and comment out exam information links in layout

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "MW119/MW65 - Causal machine Learning   "
+title: "MW119/MW65 - Causal Machine Learning"
 contributors: "Prof. Dr. Jannis Kück"
 affiliation: "Düsseldorf Institute for Competition Economics (DICE)"
 
